[#9] feat: get list room API
